--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/@media.css">
     <link rel="icon" type="image/png" href="img/logo3.png">
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <title>C&B-Clean</title>
 </head>
 <body>
@@ -77,14 +78,40 @@
             <div class="infoContact">
                 <p>Contactez-nous via ce formulaire ou envoyez-nous un e-mail directement à <span class="infoEmail">cbcleanpro@gmail.com</span></p>
             </div>
-            <form class="formContact" action="">
-                <input type="text" placeholder="Nom" required>
-                <input type="email" placeholder="E-mail" required>
+            <form class="formContact" id="contact-form">
+                <input type="text" name="nom" placeholder="Nom" required>
+                <input type="email" name="email" placeholder="E-mail" required>
                 <input type="tel" id="phone" name="phone" placeholder="Téléphone (optionnel)">
-                <input type="text" id="subject" name="subject" placeholder="Sujet" required>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Message" required></textarea>
-                <button>Envoyez un message</button>
+                <input type="text" id="sujet" name="sujet" placeholder="Sujet" required>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
+                <button type="submit">Envoyez un message</button>
             </form>
+        </div>
+    </section>
+
+
+    <section class="coordonneesReseauxSociaux">
+        <h1>Localisation et Réseaux sociaux</h1>
+
+        <div class="containerSociauxLocalisation">
+            <div class="localosation">
+                <div>
+                    <img src="./img/loc.png" alt="">
+                </div>
+                <h2>Lyon - 69</h2>
+            </div>
+            <div class="instagram">
+                <div>
+                    <img src="./img/insta.png" alt="">
+                </div>
+                <a href="https://www.instagram.com/cbcleanpro/"><h2>@cbcleanpro</h2></a>
+            </div>
+            <div class="whatsapp">
+                <div>
+                    <img src="./img/watsapp.png" alt="">
+                </div>
+                <h2>+33-734268115</h2>
+            </div>
         </div>
     </section>
 
