--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/@media.css">
     <link rel="icon" type="image/png" href="img/logo3.png">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <title>C&B-Clean</title>
+    <title>C&B-Clean | Nettoyage Automobile Haut de Gamme</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -22,7 +28,7 @@
         </nav>
     </header>
 
-    <section id="accueil">
+    <section id="accueil" class="reveal">
 
         <div class="containerLogoInfo">
             <div class="containerLogo">
@@ -30,13 +36,14 @@
                 <h1>C&B - CLEAN</h1>
             </div>
 
-            <article class="InfoEntreprise">
+            <article class="InfoEntreprise glass-card">
                 <h2>
                     Bienvenue chez C&B Clean !
                 </h2>
                 <p>
                     Spécialistes du nettoyage automobile et du nettoyage de fauteuils,
-                    nous intervenons avec professionnalisme et efficacité pour redonner éclat et fraîcheur à vos véhicules et à vos meubles.
+                    nous intervenons avec professionnalisme et efficacité pour redonner éclat et fraîcheur à vos
+                    véhicules et à vos meubles.
 
                     Que vous soyez un particulier ou une entreprise,
                     nous adaptons nos services à vos besoins avec des produits écologiques et un savoir-faire reconnu.
@@ -44,39 +51,40 @@
             </article>
         </div>
 
-        <div class="containerServicesEngagement">
-            <article class="InfosSurBord">
+        <div class="containerServicesEngagement reveal">
+            <article class="InfosSurBord glass-card">
                 <h2>
                     Nos services
                 </h2>
 
                 <ul>
-                    <li>➜ Nettoyage intérieur / extérieur de voitures</li>
-                    <li>➜ Shampoing textile / cuir</li>
-                    <li>➜ Nettoyage et désinfection de fauteuils</li>
-                    <li>➜ Traitement anti-odeur / antibactérien</li>
-                    <li>➜ Intervention à domicile ou sur site</li>
+                    <li>Nettoyage intérieur / extérieur de voitures</li>
+                    <li>Shampoing textile / cuir</li>
+                    <li>Nettoyage et désinfection de fauteuils</li>
+                    <li>Traitement anti-odeur / antibactérien</li>
+                    <li>Intervention à domicile ou sur site</li>
                 </ul>
             </article>
 
-            <article class="InfosSurBord">
+            <article class="InfosSurBord glass-card">
                 <h2>Nos engagements</h2>
                 <ul>
-                    <li>➜ Produits écologiques</li>
-                    <li>➜ Ponctualité garantie</li>
-                    <li>➜ Satisfaction client</li>
-                    <li>➜ Respect de l’hygiène</li>
+                    <li>Produits écologiques</li>
+                    <li>Ponctualité garantie</li>
+                    <li>Satisfaction client</li>
+                    <li>Respect de l’hygiène</li>
                 </ul>
             </article>
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="reveal">
         <h1>Contact</h1>
 
-        <div class="containerContact">
+        <div class="containerContact glass-card">
             <div class="infoContact">
-                <p>Contactez-nous via ce formulaire ou envoyez-nous un e-mail directement à <span class="infoEmail">cbcleanpro@gmail.com</span></p>
+                <p>Contactez-nous via ce formulaire ou envoyez-nous un e-mail directement à <span
+                        class="infoEmail">cbcleanpro@gmail.com</span></p>
             </div>
             <form class="formContact" id="contact-form">
                 <input type="text" name="nom" placeholder="Nom" required>
@@ -90,7 +98,7 @@
     </section>
 
 
-    <section class="coordonneesReseauxSociaux">
+    <section class="coordonneesReseauxSociaux reveal">
         <h1>Localisation et Réseaux sociaux</h1>
 
         <div class="containerSociauxLocalisation">
@@ -104,7 +112,9 @@
                 <div>
                     <img src="./img/insta.png" alt="">
                 </div>
-                <a href="https://www.instagram.com/cbcleanpro/"><h2>@cbcleanpro</h2></a>
+                <a href="https://www.instagram.com/cbcleanpro/">
+                    <h2>@cbcleanpro</h2>
+                </a>
             </div>
         </div>
     </section>
@@ -114,8 +124,8 @@
         <button class="button">
             <svg class="svgIcon" viewBox="0 0 384 512">
                 <path
-                        d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
-                ></path>
+                    d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z">
+                </path>
             </svg>
         </button>
     </div>
@@ -123,4 +133,5 @@
     <script src="script/script.js"></script>
 
 </body>
+
 </html>
