Ajout du responsive

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <body>
     <header>
         <nav>
+            <div class="mobile-menu-btn" id="mobileMenuBtn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul>
                 <li><a href="#accueil">Acceuil</a></li>
                 <li><a href=""><img src="img/logo2.png" alt=""></a></li>
